--- a/web/index.html
+++ b/web/index.html
@@ -87,7 +87,7 @@
 	<h2>Installation</h2>
 	<p>
 		First, download the installation archive :<br/>
-		- live 9.5+ : <strong><a href="Launchpad95_Pro.zip">Launchpad95_Pro.zip</a></strong><br/>
+		- live 9.5+ : <strong><a href="Launchpad_Pro95.zip">Launchpad_Pro95.zip</a></strong><br/>
 		Unzip the zip file and copy the folder Launchpad_Pro95 into the Ableton Live's "MIDI Remote Scripts" folder. (where is that folder ? look at <a href="#faq-3">faq 3</a>.
 	</p>
 	<p>
