bug fixes. merging with launchpad95 code (partly)

--- a/web/index.html
+++ b/web/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<title>Launchpad95 Pro : Ableton LIVE control surface remote scripts for Novation Launchpad Pro</title>
+	<title>Launchpad Pro95 : Ableton LIVE control surface remote scripts for Novation Launchpad Pro</title>
 	<link rel="stylesheet" type="text/css" media="screen" href="http://motscousus.com/css/site.css" />
 	<script type="text/javascript" src="http://motscousus.com/js/site.js"></script>
 </head>
@@ -64,7 +64,7 @@
   </style>
 
 <div id="main">
-	<h1>Launchpad95 Pro : Ableton LIVE control surface remote scripts for Novation Launchpad Pro</h1>
+	<h1>Launchpad Pro95 : Ableton LIVE control surface remote scripts for Novation Launchpad Pro</h1>
 	<p id="toc"></p>
 	<p>
 		These scripts are modified version of Ableton Live 9.5 scripts for Novation Launchpad Pro. 
@@ -93,8 +93,9 @@
 	<p>
 		After the folder has been copied, plug-in your Launchpad in the computer 
 		and start Ableton Live. Open up the preferences panel and go to "MIDI Sync" panel. 
-		Select 'Launchpad95 Pro' as your control surface and select the launchpad PRO Livwe Midi Port midi ports.
+		Select 'Launchpad Pro95' as your control surface and select the launchpad PRO Livwe Midi Port midi ports.
 	</p>
+	
 	</section>
 	
 	<section>
@@ -444,12 +445,6 @@
 	
 	<section>
 	<h3>Device Controller Mode</h3>
-	<p>
-		Device Controller mode is a sub mode of User Mode 1. 
-		To activate Device Controller Mode, press User Mode 1 button once, 
-		the normal User Mode 1 is activated (mode button remains amber). 
-		Press User Mode 1 button once again, button turns green, activating the Device Controller. 
-	</p>
 	<h4>Navigation</h4>
 	<p>
 		Navigation among tracks and devices is done using the top left navigation buttons. 
@@ -478,11 +473,12 @@
 	<dl>
 	<h4>Locking to devices</h4>
 	<p>		
-		you can save up to 4 devices using the 4 bottom scene button. if not device is saved, the button will be amber.
+		You can save up to 4 devices using the 4 bottom scene button. if not device is saved, the button will be pink.
 		To save a device, first select the desired device, then press one of the 4 last scene buttons for more than half a second.
-		the button turn red ! your device is save. you can recall it at any time by a short press on the scene button.
-		to unsave a device, apply a long press again on the button.  
+		the button turn red ! your device is saved. You can recall it at any time by a short press on the scene button.
+		To unsave a device, apply a long press again on the button.  
 	</p>
+	<br/><br/>
 	<table class="launchpad">
 			<tr class="top">
 				<td></td>
@@ -612,6 +608,7 @@
 	<h3>Drum Step Sequencer Mode</h3>
 	<p> 
 		this sequencer has two sub modes detailed below. combined and multinotes. (note there is a second step sequencer, melodic step sequencer detailed further down).
+		Drum Sequencer is active when the user button is in colour mint. Melodic StepSequencer is active when user button is orange. When user button is purple, then plain user mode is selected.
 	</p>
 	<p>		
 		A playback/metronome indicator is scrolling thru the grid in amber to indicate the playing position of the clip as the clip is playing. 
@@ -620,7 +617,7 @@
 	<p>
 		Here are the colour codes used : <br/>
 		- Normal notes are shown in Green, intensity depending on their velocity.<br/>
-		- Muted notes are displayed in red.<br/> 
+		- Muted notes are displayed in white.<br/> 
 		- Notes being currently played are flashing in red.<br/>
 		- Notes being played and being outside of the currently displaying midi clip block will also flash in red.<br/>
 	</p>
@@ -633,9 +630,6 @@
 	</p>
 	<p>
 		A summary of functions assigned to the buttons is shown in the table below. hover your mouse above a button to get detailed descriptions.
-	</p>
-	<p>
-		StepSeq by default works in combined mode. pressing the 4th scene button toggles between combined mode and multi note mode. Multinote mode works in similarly to the the previous step in launchpad85, while combined mode offers mode close to the way Push StepSeq behaves. 
 	</p>
 	</section>
 
@@ -650,18 +644,13 @@
 	<p>
 		Some buttons have combined function : <br/>
 		<ul> 
-			<li>Lock (2nd scene button):
+			<li>Lock (last scene button):
 			<ul>
 				<li>press long to switch between clip lock and play clip on locked track mode</li>
 				<li>yellow : track lock mode. step sequencer is locked to current track and will follow playing clip on this track</li>
 				<li>red : step sequencer is locked to current clip.</li>
 			</ul>
-			<li>quantize (3rd scene button):
-			<ul>
-				<li>press long duplicate clip in a new clip</li>
-			</ul>
-			</li>
-			<li>Mute (last scene button):
+			<li>Mute (7th scene button):
 			<ul>
 				<li>hold mute button and click on a note to mute it</li>
 				<li>hold mute button and press on a note in the bottom left quadrant to mute it</li>
@@ -673,11 +662,6 @@
 				<li>hold velocity button and click on a note to change its velocity</li>
 				<li>hold velocity button and click on a note to change in the note selector to ear a preview of the sound</li>
 				<li>hold velocity button and select a loop range in the loop selector to extend the original clip content to the newly selected length</li>
-			</ul>
-			</li>
-			<li>velocity (7th scene button) and mute
-			<ul>
-				<li>hold velocity button and mute button at the same time and select a loop range in the loop selector in order to mute this time selection</li>
 			</ul>
 			</li>
 		</ul>
@@ -1084,6 +1068,14 @@
 	</section>
 
 
+	<!--h2>Max For Live On Screen Display / Helper</h2>
+	<p>
+		Launchpad95 comes packaged with a Max for Live device that will display useful information about currently selected tracks, clips and other parameters. 
+		Make sure to try it !
+	</p>
+	<p>
+		It is available Launchpad95/M4LDevice/Launchpad95 OSD.amxd
+	</p-->
 
 
 	<section>
@@ -1099,7 +1091,7 @@
 		<dt id="faq-1">1. Which Launchpad flavours are supported</dt>
 		<dd>
 			Launchpad Pro.<br/>
-			For all other launchpads, see Launchpad95.<br/>
+			For all other launchpads, see <a href="http://motscousus.com/stuff/2011-07_Novation_Launchpad_Ableton_Live_Scripts/">Launchpad95</a>.<br/>
 			<br/>
 		</dd>
 
@@ -1152,9 +1144,10 @@
 			<br/>
 		</dd>
 
-		<dt id="faq-7">7. Good work ! i wish to support this work   ! is there a way to donate somehow ?</dt>
+		<dt id="faq-7">7. good work ! i wish to donate ! is there a way to donate somehow ?</dt>
 		<dd>
-			 You can use <a href="https://www.paypal.com/us/cgi-bin/webscr?cmd=_send-money&amp;nav=1&amp;email=hdavid@mail.com">paypal</a> to my account hdavid@mail.com.
+			Sure ! Your donations allowed me to pay for the Launchpad Pro that is now supported ! thank you for this.<br/>
+			<a href="https://www.paypal.com/us/cgi-bin/webscr?cmd=_send-money&amp;nav=1&amp;email=hdavid@mail.com">paypal</a> to my account hdavid@mail.com.
 		</dd>
 
 
@@ -1170,6 +1163,7 @@
 	<section>
 	<h2>History</h2>
 	<ul>
+		<li>2016-03-28 - bug fixes. merging with launchpad95 code (partly)</li>
 		<li>2016-01-10 - bug fixes</li>
 		<li>2015-12-28 - first public version</li>
 		<li>2015-10 - working on an initial version</li>	
