--- a/web/index.html
+++ b/web/index.html
@@ -1163,6 +1163,7 @@
 	<section>
 	<h2>History</h2>
 	<ul>
+		<li>2018-01-29 - fixes for ableton live 10</li>
 		<li>2017-01-04 - custom scale mode. contribution from boblemarin</li>
 		<li>2016-04-09 - bug fixes. minor skins updates</li>
 		<li>2016-03-28 - bug fixes. merging with launchpad95 code (partly)</li>
