--- a/web/index.html
+++ b/web/index.html
@@ -85,17 +85,29 @@
 
 	<section>
 	<h2>Installation</h2>
-	<p>
-		First, download the installation archive :<br/>
-		- live 9.5+ : <strong><a href="Launchpad_Pro95.zip">Launchpad_Pro95.zip</a></strong><br/>
-		Unzip the zip file and copy the folder Launchpad_Pro95 into the Ableton Live's "MIDI Remote Scripts" folder. (where is that folder ? look at <a href="#faq-3">faq 3</a>.
-	</p>
-	<p>
-		After the folder has been copied, plug-in your Launchpad in the computer 
-		and start Ableton Live. Open up the preferences panel and go to "MIDI Sync" panel. 
-		Select 'Launchpad Pro95' as your control surface and select the launchpad PRO Livwe Midi Port midi ports.
-	</p>
-	
+	<li>
+		Download the installation archive : <strong><a href="Launchpad_Pro95.zip">Launchpad_Pro95.zip</a></strong><br/>
+	</li>
+	<li>
+			For Live 10 and above, Unzip the zip file and copy the folder Launchpad95 into you Ableton Live User Library, 
+			in a folder named "Remote Scripts". Create this folder if needed.<br/>
+			<img src="setup-folders.png" style="margin:10px"/>
+	</li>
+	<li>
+			For Live 9 users, see <a href="https://motscousus.com/stuff/2011-07_Novation_Launchpad_Ableton_Live_Scripts/#faq-4">faq 4 of Launchpad95</a>
+	</li>
+	<li>
+			After the folder has been copied, plug-in your Launchpad in the computer 
+			and start Ableton Live. Open up the preferences panel and go to "MIDI Sync" panel. 
+			Select Launchpad95 as your control surface and select the ports as shown below.
+			<br/>
+			<img src="setup-script.png" style="margin:10px"/>
+	</li>
+	<li>
+		Make sure to enable "Track", "Sync" and "Remote" in the midi options 
+		below for the MIDI ports used by Launchpad95.<br/>
+		<img src="setup-ports.png" style="margin:10px"/>
+	</li>
 	</section>
 	
 	<section>
@@ -1163,6 +1175,7 @@
 	<section>
 	<h2>History</h2>
 	<ul>
+		<li>2021-02-05 - Live 11 Support</li>
 		<li>2018-06-08 - duplicate clip in session view. (thanks marctdt!)</li>
 		<li>2018-01-29 - fixes for ableton live 10</li>
 		<li>2017-01-04 - custom scale mode. contribution from boblemarin</li>
