--- a/web/index.html
+++ b/web/index.html
@@ -1175,6 +1175,7 @@
 	<section>
 	<h2>History</h2>
 	<ul>
+        <li>2025-01-28 - Step seq fixes (thanks John)</li>
         <li>2023-02-01 - Python 3 Fixes. (thanks jefffm)</li>
 		<li>2021-02-05 - Live 11 Support</li>
 		<li>2018-06-08 - duplicate clip in session view. (thanks marctdt!)</li>
